스케쥴러 구현 및 테스트 클라이언트 추가

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -15,8 +15,16 @@
     padding: 0.2em 0;
 }
 
+.footer {
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 70px;
+    border-top: 1px solid #E5E5E5;
+}
+
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
 @import 'main/main.less';
+@import 'state/state.less';
 // endinjector
