--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1,16 +1,12 @@
-.thing-form {
-  margin: 20px 0;
-}
-
 #banner {
-    border-bottom: none;
-    margin-top: -20px;
-}
-
-#banner h1 {
+  border-bottom: none;
+  margin-top: -20px;
+  
+  h1 {
     font-size: 60px;
     line-height: 1;
     letter-spacing: -1px;
+  }
 }
 
 .hero-unit {
@@ -22,9 +18,10 @@
     background: #4393B9;
 }
 
-.footer {
-    text-align: center;
-    padding: 30px 0;
-    margin-top: 70px;
-    border-top: 1px solid #E5E5E5;
+#main {
+
+
+  .state {
+    font-family: verdana;
+  }
 }
