단말 정보를 확인하고 관리하기 위한 페이지 추가

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -25,6 +25,7 @@
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
+@import 'device/device.less';
 @import 'main/main.less';
 @import 'useage/useage.less';
 // endinjector
