실시간 로그 추가

--- a/client/app/device/device.less
+++ b/client/app/device/device.less
@@ -15,11 +15,16 @@
     width: 200px;
   }
 
-  &.manager {
+  &.managerInfo {
+    width: 200px;
     h4 {
       cursor: pointer;
     }
   }
+}
+
+.history {
+  clear: left;
 }
 
 
