디바이스 로그 화면 스타일 변경

--- a/client/app/device/device.less
+++ b/client/app/device/device.less
@@ -7,7 +7,7 @@
     text-align: center;
 
     img {
-      width: 400px;
+      height: 240px;
     }
   }
 
@@ -25,6 +25,14 @@
 
 .history {
   clear: left;
+
+  ul {
+    background-color: black;
+    color: #ccc;
+    list-style: none;
+    padding: 10px;
+    margin: 0;
+  }
 }
 
 
