상단 메뉴바 스타일 변경 및 device 페이지 추가

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -28,4 +28,5 @@
 @import 'device/device.less';
 @import 'main/main.less';
 @import 'useage/useage.less';
+@import 'navbar/navbar.less';
 // endinjector
