--- a/client/app/device/device.less
+++ b/client/app/device/device.less
@@ -9,6 +9,9 @@
     img {
       height: 240px;
     }
+
+    .deviceInfo {
+    }
   }
 
   &.deviceInfo {
@@ -37,4 +40,6 @@
 
 
 
-
+.clickable {
+  cursor: pointer;
+}
