스타일 수정

--- a/client/app/device/device.less
+++ b/client/app/device/device.less
@@ -1,3 +1,9 @@
+.device-list{
+  .float-box {
+    margin: 0 80px 40px 0;
+  }
+}
+
 .float-box {
   float: left;
   width: 300px;
@@ -44,6 +50,8 @@
     list-style: none;
     padding: 10px;
     margin: 0;
+    height: 300px;
+    overflow-y: scroll;
   }
 }
 
