디바이스 로그가 위에서 아래로 쌓이도록 변경과 동시에 자동 스크롤 다운 추가

--- a/client/app/device/device.less
+++ b/client/app/device/device.less
@@ -44,19 +44,26 @@
 .history {
   clear: left;
 
-  ul {
+  .logs {
     background-color: black;
     color: #ccc;
-    list-style: none;
-    padding: 10px;
-    margin: 0;
     height: 300px;
     overflow-y: scroll;
+
+    ul {
+      padding: 10px;
+      margin: 0;
+      list-style: none;
+    }
   }
 }
 
-
-
 .clickable {
   cursor: pointer;
+}
+
+[scroll-glue]{
+  height: 100px;
+  overflow-y: scroll;
+  border: 1px solid grey;
 }
