디바이스 로그에 사용시간 추가

--- a/client/app/device/device.less
+++ b/client/app/device/device.less
@@ -54,6 +54,10 @@
       padding: 10px;
       margin: 0;
       list-style: none;
+
+      li.seperate {
+        margin-bottom: 10px;
+      }
     }
   }
 }
