웹에서 클라이언트 강제 연결 끊기 추가

--- a/client/app/device/device.less
+++ b/client/app/device/device.less
@@ -35,8 +35,14 @@
   &.managerInfo {
     width: 200px;
 
-    h4 {
+    div {
+      padding: 3px 0 3px 2px;
+      height: 26px;
       cursor: pointer;
+    }
+
+    input {
+      color: #369;
     }
   }
 }
