앵큘러 코드 정리

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -25,8 +25,8 @@
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
-@import 'device/device.less';
-@import 'main/main.less';
+@import 'device/list/device.list.less';
+@import 'home/home.less';
 @import 'useage/useage.less';
 @import 'navbar/navbar.less';
 // endinjector
