디바이스 모델에 할당 시간한 시간 추가 및 디바이스 상세 정보에 할당한 시간 카운터추가

--- a/client/app/device/list/device.list.less
+++ b/client/app/device/list/device.list.less
@@ -1,79 +1,44 @@
 .device-list{
+
   .float-box {
     margin: 0 80px 40px 0;
-  }
-}
-
-.float-box {
-  float: left;
-  width: 300px;
-  height: 300px;
-
-  &.photo {
-    text-align: center;
-
-    img {
-      height: 240px;
-    }
-  }
-
-  &.deviceInfo {
-    width: 200px;
-  }
-
-  .deviceInfo {
-    .nav-stacked > li + li {
-      line-height: 10px;
-      font-size: 12px;
-    }
-
-    h4 {
-      margin-bottom: 0px;
-    }
-  }
-
-  &.managerInfo {
-    width: 200px;
-
-    div {
-      padding: 3px 0 3px 2px;
-      height: 26px;
-      cursor: pointer;
-    }
-
-    input {
-      color: #369;
-    }
-  }
-}
-
-.history {
-  clear: left;
-
-  .logs {
-    background-color: black;
-    color: #ccc;
+    float: left;
+    width: 300px;
     height: 300px;
-    overflow-y: scroll;
 
-    ul {
-      padding: 10px;
-      margin: 0;
-      list-style: none;
+    .status {
+      color: #848484;
 
-      li.seperate {
-        margin-bottom: 10px;
+      &.connected {
+        color: #5cb85c;
+
+        &.used {
+          color: #f0ad4e;        
+        }
+      }
+    }
+
+    &.photo {
+      text-align: center;
+
+      img {
+        height: 240px;
+      }
+    }
+
+    .deviceInfo {
+
+      .nav-stacked > li + li {
+        line-height: 10px;
+        font-size: 12px;
+      }
+
+      h4 {
+        margin: 0px;
       }
     }
   }
 }
 
-.clickable {
-  cursor: pointer;
-}
 
-[scroll-glue]{
-  height: 100px;
-  overflow-y: scroll;
-  border: 1px solid grey;
-}
+
