--- a/client/app/app.less
+++ b/client/app/app.less
@@ -25,8 +25,8 @@
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
+@import 'device/detail/device.detail.less';
 @import 'device/list/device.list.less';
 @import 'home/home.less';
-@import 'useage/useage.less';
 @import 'navbar/navbar.less';
 // endinjector
