--- a/client/app/app.less
+++ b/client/app/app.less
@@ -8,6 +8,10 @@
  * App-wide Styles
  */
 
+ body {
+  font-family: Helvetica,AppleSDGothicNeo,sans-serif;
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
